# TradingPlatform

./: .env.example  .gitignore  AGENTS.md  MASTER_INDEX.md  README.md  pyproject.toml  requirements.txt  run_api.py  run_ui.py
docs/: GrandPappy_Trading_Platform.txt  InstitutionalEdge_SCALPER.txt  InstitutionalEdge_SCANNER.txt  InstitutionalEdge_STRATEGY.txt  InstitutionalEdge_TOS.txt  InstitutionalEdge_WATCHLIST.txt  TRADING_CHEAT_SHEET.txt  derivatives_ai_agent.txt  gamma_strategy_matrix.md  power_hour_playbook.md
frontend/: professional_trading_terminal.html  trading-terminal.html
scripts/: monitoring_system.py  tos_backup.py
src/: __init__.py
src/analytics/: dix_tracker.py  earnings_calendar.py  portfolio_tracker.py  risk_manager.py  trade_journal.py  vol_arb.py
src/api/: app.py  legacy_gamma_api.py  routes_backtest.py  routes_gamma.py  routes_options.py  routes_quotes.py
src/backtesting/: backtest_engine.py  backtester.py
src/calculators/: __init__.py  gamma_exposure.py  gex_calculator.py  greeks.py  vanna_charm.py  vix_analyzer.py
src/config/: __init__.py  config.py
src/core/: __init__.py  alert_system.py  market_regime.py  position_sizer.py  strategy_engine.py
src/data/: api_data.py  cboe_scraper.py  data_manager.py  polygon_client.py  realtime_feed.py  schwab_connector.py  yahoo_options.py
src/hedging/: auto_hedger.py
src/ml/: ml_predictor.py  (+1 more)
tests/: conftest.py  test_config.py  test_gamma_exposure.py  test_greeks.py  test_market_regime.py  test_options_flow_scanner.py  test_position_sizer.py  test_risk_manager.py  test_vix_analyzer.py
(+17 files in other folders)
