[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "trading-platform"
version = "1.0.0"
description = "Unified institutional-grade options & futures trading platform"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "plotly>=5.18.0",
    "streamlit>=1.30.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "yfinance>=0.2.30",
    "polygon-api-client>=1.12.0",
    "websocket-client>=1.6.0",
    "plyer>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[project.scripts]
trading-ui = "run_ui:main"
trading-api = "run_api:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
